--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.geekydroid.androidbook">
 
     <application
+        android:name=".AndroidBook"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidBook"
         tools:targetApi="31">
+        <activity
+            android:name=".DaasActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
