--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,5 @@ dependencies {
     androidTestImplementation "androidx.work:work-testing:$work_version"
     implementation "androidx.work:work-multiprocess:$work_version"
 
+    implementation 'joda-time:joda-time:2.10.5'
 }
