--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.geekydroid.androidbook">
 
+<!--        <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />-->
     <application
         android:name=".AndroidBook"
         android:allowBackup="true"
@@ -23,6 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".SampleService"
+            android:exported="false" />
     </application>
 
 </manifest>
