--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     package="com.geekydroid.androidbook">
 
 <!--        <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />-->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <application
         android:name=".AndroidBook"
         android:allowBackup="true"
@@ -24,9 +27,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service
-            android:name=".SampleService"
-            android:exported="false" />
+        <service android:name=".FloatingWidgetService"
+            android:enabled="true"
+            android:exported="false"
+            android:stopWithTask="true"/>
     </application>
 
 </manifest>
